--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,38 +1,40 @@
+body {
+    background-color: #02273a;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 400;
+}
 .App {
-  text-align: center;
+    /* margin-top: 1.45rem; */
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+    background-color: #033249 !important;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar-dark .navbar-brand {
+    color: #EFEDE8;
+    font-weight: 600;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 600;
+    text-rendering: optimizeLegibility;
 }
-
-.App-link {
-  color: #61dafb;
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link:active {
+    color: #FF8038;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.boxed-layout {
+	background-color: #EFEDE8;
+	border-left: solid 1px #033249;
+	border-right: solid 1px #033249;
+	box-shadow: 0 10px 10px #011a27;
+}
+.jm-port-display-4 {
+    font-size: calc(1.475rem + 2.7vw);
+}
+.jm-port-display-6 {
+    font-size: calc(1.375rem + 1.5vw);
 }
